feat: add new auth endpoint updateProfile and updatePassword
